--- a/CRV Syntax Doc/说明.md
+++ b/CRV Syntax Doc/说明.md
@@ -4,6 +4,6 @@
 
 Vectorvideo CRV是一种专为矢量动画脚本设计的视频格式，也是一种语言，语法风格借鉴 Python 的简洁性，通过指令式脚本控制矢量图形的绘制、修改与动画时序，适用于制作动态演示、教学动画或交互式矢量图形。
 
-Vectorvideo CRV解释器易于扩展，使用Python或Vectorvideo CRV即可为Vectorvideo CRV Mods扩展新功能和数据类型。Vectorvideo CRV也可用作软件中的扩展程序语言。
+Vectorvideo CRV播放器易于扩展，使用Python或Vectorvideo CRV Mods即可为Vectorvideo CRV扩展新功能和数据类型。Vectorvideo CRV也可用作软件中的扩展程序语言。
 
-本文件夹的文档介绍了Vectorvideo CRV的基本概念和特性。 请注意它预期你对于编程的总体概念有基本的了解。 准备好一个Vectorvideo CRV解释器随时上手练习会很有帮助，但所有的示例都是完备自足的，因此本教程也可以离线阅读。
+本文件夹的文档介绍了Vectorvideo CRV的基本概念和特性。 请注意它预期你对于编程的总体概念有基本的了解。 准备好一个Vectorvideo CRV播放器随时上手练习会很有帮助，但所有的示例都是完备自足的，因此本教程也可以离线阅读。
