--- a/CRV Syntax Doc/说明.md
+++ b/CRV Syntax Doc/说明.md
@@ -1,9 +1,19 @@
 # 本文件夹说明
 
-本文件夹是关于CRV所有语法的说明。
+本文件夹是关于Vectorvideo CRV所有语法的说明。
 
 Vectorvideo CRV是一种专为矢量动画脚本设计的视频格式，也是一种语言，语法风格借鉴 Python 的简洁性，通过指令式脚本控制矢量图形的绘制、修改与动画时序，适用于制作动态演示、教学动画或交互式矢量图形。
 
+Vectorvideo CRV的脚本文件（以下简称视频）是通过 ```*.CRV``` 格式承载的，而Vectorvideo CRV通过Vectorvideo CRV实现（以下简称解释器或播放器）运行。
+
+## 什么是Vectorvideo CRV
+
+Vectorvideo CRV属于一种作用于图形的[标记语言](https://baike.baidu.com/item/%E6%A0%87%E8%AE%B0%E8%AF%AD%E8%A8%80/5964436)，但是它的脚本实例看上去更像python等编程语言。
+
 Vectorvideo CRV播放器易于扩展，使用Python或Vectorvideo CRV Mods即可为Vectorvideo CRV扩展新功能和数据类型。Vectorvideo CRV也可用作软件中的扩展程序语言。
 
-本文件夹的文档介绍了Vectorvideo CRV的基本概念和特性。 请注意它预期你对于编程的总体概念有基本的了解。 准备好一个Vectorvideo CRV播放器随时上手练习会很有帮助，但所有的示例都是完备自足的，因此本教程也可以离线阅读。
+## 如何使用本文件夹？
+
+本文件夹的文档介绍了Vectorvideo CRV的基本概念和特性。 请注意它预期你对于编程的总体概念有基本的了解。 准备好一个Vectorvideo CRV播放器随时上手练习会很有帮助，但所有的示例都是完备自足的，因此本文件夹的内容也可以离线阅读。
+
+我希望尽可能地保证内容精确无误，但还是选择使用自然词句进行描述，正式的规格定义仅用于句法和词法解析。这样应该能使文档对于普通人来说更易理解，但也可能导致一些歧义。因此，如果你是来自火星并且想凭借这份文档把Vectorvideo CRV重新实现一遍，也许有时需要自行猜测，实际上最终大概会得到一个十分不同的东西。
